# generator-tidal-midi-synth

./: .yo-rc.json  LICENSE  README.md  package.json
__tests__/: app.js
generators/app/: index.js
generators/app/templates/: synth.cabal  synth.hs
